# ecommerce-reporting-agent-pub

./: .env.example  .gitignore  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: create_yaml_profiles.py  era_schema_mapper.py  generate_business_profiles.py  validate_profiles.py
config/business_logic_validation/: conversion_funnel_validation.yaml  high_noise_test.yaml  insufficient_seasonality_test.yaml  revenue_growth_validation.yaml  seasonal_pattern_validation.yaml
config/era_business_profiles/: data_with_pii.yaml  edge_case_scenarios.yaml  high_growth_startup.yaml  seasonal_business.yaml  stable_enterprise.yaml
demo/: hmac_integrity_demo.py
docs/: README.md
docs/01_architecture/: ADD-LLM-SERVICE-V2.0.md  ADD-UIUX-POLISH-V2.0.md  blueprint.md  roadmap.md  technical_debt_ledger.yml
docs/01_architecture/investigations/: google_client_dependency_analysis.md  pydantic_settings_justification.md
docs/03_technical_blueprints/langgraph/: state_and_context_guide.md
docs/05_security/: THREAT_MODEL_V1.md  THREAT_MODEL_V1_REVIEW.md
features/: era_alpha_1_1_tdg_configuration_engineering.feature  era_alpha_1_2_business_profile_validation_framework.feature  era_alpha_1_3_pii_sanitization_integration.feature
integration/: pii_sanitization_era.py
monitoring/: __init__.py  comprehensive_profiling_report.py  resource_profiler.py
results/: validation_results.json
scripts/: run_demo.py
src/: __init__.py  main.py
src/agent/: config.py
src/agent/api/: security.py
src/agent/api/middleware/: request_signing.py
src/agent/clients/: anthropic_client.py  factory.py  ga4_client.py  google_client.py  llm_interface.py  shopify_client.py
src/agent/graph/: __init__.py  builder.py  compile_report_node.py  execute_high_risk_tool_node.py  fetch_data_node.py  generate_insights_node.py  generate_visualizations_node.py  handle_error_node.py  human_approval_node.py  pre_flight_check_node.py  process_data_node.py  self_critique_node.py  start_node.py
src/agent/models/: insights.py  state.py
src/agent/observability/: logging_config.py  performance_tracker.py
src/agent/tools/: ga4_tools.py  shopify_tools.py  tool_router.py
src/agent/utils/: pii_scrubber.py
src/agent/utils/test_data_generator/core/: __init__.py
src/agent/utils/test_data_generator/poc/: minimal_generator.py
src/streamlit_app/: __init__.py  api_client.py  app.py  session_state.py  streamlit_config.py  theme.py
src/streamlit_app/components/: __init__.py  feedback.py  header.py  main_interface.py  results_dashboard.py
src/test_data_generator/: __init__.py
src/test_data_generator/core/: generator.py
src/test_data_generator/poc/: __init__.py  minimal_generator.py  pii_sanitization_poc.py
src/validation/: __init__.py  business_logic_self_critic.py  enhanced_audit_foundation.py  enhanced_ground_truth_engine.py  evidence_verifier.py  lean_attribution_engine.py  local_challenger_model.py  pragmatic_business_logic_validator.py  structured_evidence_framework.py  structured_insight_models.py  trust_metrics_orchestrator.py  validation_config_loader.py
templates/: report_template.html
tests/: conftest.py  test_era_schema_mapper.py  test_pii_sanitization_integration.py  test_readme.py
tests/api/: test_security.py
tests/clients/: test_anthropic_client.py  test_factory.py  test_ga4_client.py  test_google_client.py  test_shopify_client.py
tests/config/: test_config.py
tests/demo/: test_hmac_integrity_demo.py
tests/frontend/: test_api_client.py  test_app.py  test_components.py  test_session_state.py  test_streamlit_config.py  test_theme.py
tests/frontend/components/: test_feedback.py  test_header.py  test_main_interface.py  test_results_dashboard.py
tests/graph/: __init__.py  test_builder.py  test_compile_report_node.py  test_fetch_data_node.py  test_generate_insights_node.py  test_generate_visualizations_node.py  test_handle_error_node.py  test_pre_flight_check_node.py  test_process_data_node.py  test_self_critique_node.py  test_start_node.py
tests/models/: test_insights.py  test_state.py
tests/observability/: test_logging_config.py  test_performance_tracker.py
tests/performance/: __init__.py  adversarial_data_generator.py  adversarial_demo.py  comprehensive_benchmark.py  comprehensive_concurrent_benchmark.py  concurrent_load_testing.py  era_robustness_validator.py  run_adversarial_tests.py  run_concurrent_tests.py  run_resource_tests.py  run_tests.py  scale_testing_framework.py  test_adversarial_data_generation.py  test_concurrent_load_simulation.py  test_era_robustness_framework.py  test_multi_scale_performance.py  test_resource_consumption_analysis.py
tests/test_data_profiles/: __init__.py  comprehensive_validator.py  era_compatibility_validator.py  test_profile_validation.py
tests/tools/: test_ga4_tools.py  test_shopify_tools.py
tests/unit/: test_config_failclosed.py
tests/utils/: test_pii_scrubber.py
tests/validation/: test_enhanced_ground_truth_engine.py  test_integration_system.py  test_local_challenger_model.py  test_pragmatic_business_validation.py
